<resources>
    <string name="app_name">Platzigram</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">contraseña</string>
    <string name="btn_text_login">Login</string>
    <string name="img_description">platzigram_imagen</string>
    <string name="dont_have_account">¿No tienes cuenta?</string>
    <string name="create_here">Crea una aquí</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_confirm_password">Confirmar contraseña</string>
    <string name="btn_text_createAccount">Unete</string>
    <string name="toolbar_title_create_account">Crear cuenta</string>
    <string name="Username_card">Carlos Pinzon</string>
    <string name="firstword_card">Hace</string>
    <string name="timecard_card">4 días</string>
    <string name="likenumber_Card">10 me gusta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottombar_search">Buscar</string>
    <string name="bottombar_home">Inicio</string>
    <string name="bottombar_profile">Perfil</string>
    <string name="secondWord_detail">Me Gusta</string>
    <string name="tittle_image_detail">\"Todo copas en la playa\"</string>
    <string name="LoreIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Morbi volutpat volutpat laoreet. Nunc nisl urna, vulputate at cursus sed, vulputate vitae purus.
        Aliquam pretium tempus orci, vitae sodales ex efficitur vel. Vivamus urna ex, tincidunt in varius sed,
        blandit eget orci. Aliquam erat volutpat. Maecenas sed quam id sem fringilla condimentum.
        Sed sagittis, nibh eu luctus venenatis, augue leo consequat augue, luctus ornare purus dolor et tellus.
        Sed pulvinar sem eu ex cursus, ac dignissim neque venenatis. Donec leo elit, aliquam id iaculis ut, vehicula a justo.
        Nunc malesuada, enim id dignissim tempor, nisi orci lobortis diam, iaculis rhoncus lorem quam id dolor.
        Vestibulum dictum eleifend dolor eget placerat. Etiam id magna nibh. Lorem ipsum dolor sit amet,
        consectetur adipiscing elit. Nulla facilisi. Ut ac tincidunt massa. Praesent et odio tortor.

    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Morbi volutpat volutpat laoreet. Nunc nisl urna, vulputate at cursus sed, vulputate vitae purus.
        Aliquam pretium tempus orci, vitae sodales ex efficitur vel. Vivamus urna ex, tincidunt in varius sed,
        blandit eget orci. Aliquam erat volutpat. Maecenas sed quam id sem fringilla condimentum.
        Sed sagittis, nibh eu luctus venenatis, augue leo consequat augue, luctus ornare purus dolor et tellus.
        Sed pulvinar sem eu ex cursus, ac dignissim neque venenatis. Donec leo elit, aliquam id iaculis ut, vehicula a justo.
        Nunc malesuada, enim id dignissim tempor, nisi orci lobortis diam, iaculis rhoncus lorem quam id dolor.
        Vestibulum dictum eleifend dolor eget placerat. Etiam id magna nibh. Lorem ipsum dolor sit amet,
        consectetur adipiscing elit. Nulla facilisi. Ut ac tincidunt massa. Praesent et odio tortor.</string>


    <!-- Facebook Strings -->
    <string name="facebook_app_id">1321823554617222</string>
    <string name="fb_login_protocol_scheme">fb1321823554617222</string>

</resources>
